# artifacts/api-server/src/routes/index.ts
@@ -11,6 +11,7 @@ import vatRouter from "./vat";
 import dashboardRouter from "./dashboard";
 import reportsRouter from "./reports";
 import { restaurantsRouter, seedRestaurants } from "./restaurants";
+import dishesRouter from "./dishes";
 
 const router: IRouter = Router();
 
@@ -29,5 +30,6 @@ router.use("/stock", stockRouter);
 router.use("/vat", vatRouter);
 router.use("/dashboard", dashboardRouter);
 router.use("/reports", reportsRouter);
+router.use("/dishes", dishesRouter);
 
 export default router;
